Updated notebook and environment

--- a/binder/environment.yml
+++ b/binder/environment.yml
@@ -1,6 +1,9 @@
 name: xy-drive-dynamics
 channels:
   - defaults
+  - conda-forge
+  - gwforg
+  - kaspermunch
 dependencies:
   - ipyparallel
   - notebook
